--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -14,6 +14,7 @@ ja:
         cat_name: 猫名
       user:
         name: 名前
+        introduction: プロフィール
         email: メールアドレス
         admin: 管理者権限
       cat:
