Set search root, close #27

--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -65,3 +65,22 @@ ja:
     cat_create: 猫を登録しました！
     cat_update: 猫情報を編集しました！
     cat_destroy: 猫情報を削除しました！
+  eyes: 目
+  nose: 鼻
+  mouth_teeth: 口・歯
+  ears: 耳
+  skin_hair: 皮膚・被毛
+  paws: 足
+  buttocks: 臀部・陰部
+  excretion: 排泄
+  appetite: 飲食
+  body_temperature: 体温
+  breath: 呼吸
+  weight: 体重
+  body_others: その他・体全体
+  under_one: 1歳未満
+  one_to_three: 1〜3歳
+  four_to_six: 4〜6歳
+  seven_to_nine: 7〜9歳
+  ten_to_twelve: 10〜12歳
+  over_thirteen: 13歳以上
