--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -93,7 +93,7 @@ ja:
       destroyed: アカウントを削除しました。またのご利用をお待ちしております。
       edit:
         are_you_sure: 本当によろしいですか？
-        cancel_my_account: アカウント削除
+        cancel_my_account: 退会する
         currently_waiting_confirmation_for_email: "%{email} の確認待ち"
         leave_blank_if_you_don_t_want_to_change_it: 空欄のままなら変更しません
         title: "%{resource}編集"
@@ -102,7 +102,6 @@ ja:
         we_need_your_current_password_to_confirm_your_changes: 変更を反映するには現在のパスワードを入力してください
       edit_password:
         are_you_sure: 本当によろしいですか？
-        cancel_my_account: アカウント削除
         currently_waiting_confirmation_for_email: "%{email} の確認待ち"
         leave_blank_if_you_don_t_want_to_change_it: 空欄のままなら変更しません
         title: "%{resource}編集"
@@ -155,3 +154,7 @@ ja:
   guest_admin_signed_in: ゲスト管理者としてログインしました。
   not_edit_guest_user: ゲストユーザーの編集・削除はできません。
   not_edit_guest_password: ゲストユーザーのパスワード再設定はできません。
+  canceled_your_account: 退会処理が完了いたしました。またのご利用を心よりお待ちしております。
+  users:
+    cancellation:
+      are_you_sure: 本当に退会しますか？
