change permissions and views within "active admin"

--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -80,6 +80,7 @@ ja:
         general: 一般
         admin: 管理者
         guest: ゲスト
+        guest_admin: ゲスト管理者
   views:
     pagination:
       first: "&laquo; "
